--- a/Kunde2.PersonenFilter/Kunde2.PersonenFilter.csproj
+++ b/Kunde2.PersonenFilter/Kunde2.PersonenFilter.csproj
@@ -1,16 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{488FF15B-59E3-4130-8BCD-80EB3CDD033B}</ProjectGuid>
+    <ProjectGuid>{47F0E22B-0623-463A-94CB-57AF80E2F9AE}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>PersonLibrary</RootNamespace>
-    <AssemblyName>PersonLibrary</AssemblyName>
+    <RootNamespace>Kunde2.PersonenFilter</RootNamespace>
+    <AssemblyName>Kunde2.PersonenFilter</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -31,25 +32,23 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BewerberProvider.cs" />
-    <Compile Include="Entscheider.cs" />
-    <Compile Include="IOutPutter.cs" />
-    <Compile Include="IPersonenFilter.cs" />
-    <Compile Include="Person.cs" />
+    <Compile Include="PersonenFilterKunde2.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App2\" />
-    <Folder Include="App\" />
+    <ProjectReference Include="..\PersonLibrary\PersonLibrary.csproj">
+      <Project>{488FF15B-59E3-4130-8BCD-80EB3CDD033B}</Project>
+      <Name>PersonLibrary</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
