--- a/Test.BewerberAuswahlApp/App.config
+++ b/Test.BewerberAuswahlApp/App.config
@@ -5,5 +5,9 @@
     </startup>
   <appSettings>
     <add key="BewerberDatei" value="C:\Entwicklung\CleanCodeKatas\Clean-Code-Katas\OpenClosedKata\BewerberAuswahlApp\BewerberListe.csv"/>
+    <add key="NameVonFilterModule" value="Kunde1.PersonenFilter"/>
+    <add key="NameVonFilterKlasse" value="Kunde1.PersonenFilter.PersonenFilterKunde1"/>
+    <add key="NameVonOutPutterModule" value="Kunde1.OutPutter"/>
+    <add key="NameVonOutPutterKlasse" value="Kunde1.OutPutter.Kunde1OutPutter"/>
   </appSettings>
 </configuration>
