--- a/Test.BewerberAuswahlApp/Kunde1.BewerberAuswahl.Test.UI.csproj
+++ b/Test.BewerberAuswahlApp/Kunde1.BewerberAuswahl.Test.UI.csproj
@@ -62,6 +62,14 @@
       <Project>{7e56f9e3-4309-40d7-a075-919fce95a08c}</Project>
       <Name>Kunde1.BewerberAuswahl.UI</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Kunde1.OutPutter\Kunde1.OutPutter.csproj">
+      <Project>{472c27f1-5f33-4a51-889c-163434003c93}</Project>
+      <Name>Kunde1.OutPutter</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Kunde1.PersonenFilter\Kunde1.PersonenFilter.csproj">
+      <Project>{c3f1da94-30c3-4fdd-a993-b437e178aca8}</Project>
+      <Name>Kunde1.PersonenFilter</Name>
+    </ProjectReference>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
